--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -46,16 +46,67 @@ Text Domain:  accelerate-theme-child
 	text-transform: uppercase;
 }
 
-/* Case Study styles */
+/******* Case Study styles *******/
+
+/* Added to overwrite something in parent that was squishing entire child site content into 960px */
+.page-header, .site-content, #navigation, .site-footer {
+	max-width: 1200px;
+}
+
+.case-study {
+	font-family: 'Open Sans', Arial, sans-serif;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-flow: row wrap;
+}
+.case-study p {
+	font-size: 1.5rem;
+}
 
 .case-study-sidebar {
 	float: left;
-	width: 300px;
+	width: 550px;
+	padding: 100px 0;
+}
+
+.case-study-sidebar h2 {
+	font-family: 'Open Sans', Arial, sans-serif;
+	font-size:2.25rem;
+	font-weight: 700;
+	margin: 0;
+}
+
+.case-study-sidebar h5 {
+	font-family: 'Open Sans', Arial, sans-serif;
+	font-size: 1.5rem;
+	text-transform: none;
+	color: gray;
+	font-weight: lighter;
+	margin: 0;
+}
+
+.case-study-sidebar p {
+	margin: 2rem 0;
+}
+
+.view-project-link a {
+	font-family: 'Montserrat';
+	font-size: 1.25rem;
+	font-weight: 700;
+	color: #45ac9d;
+	text-transform: uppercase;
 }
 
 .case-study-images {
 	float: left;
-	width: 300px;
+	width: 550px;
+}
+
+/* Accommodate for different size images */
+div.case-study-images img {
+	width: 100%;
+	height: auto;
 }
 
 .featured-work .site-content {
@@ -82,3 +133,4 @@ Text Domain:  accelerate-theme-child
 	justify-content: space-between;
 	flex-flow: row nowrap;
 }
+
