Put additional section div in page.php to get contact form centered w/out changing other pages

--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -237,10 +237,23 @@ div.single-case-study-images img {
 	float: right;
 }
 
+
+#contact-form-wrapper {
+	display: flex;
+	justify-content: center;
+}
+
+.contact-form {
+	display: flex;
+	justify-content: center;
+	width: 60%;
+}
+
 .contact-form .main-content {
 	display: flex;
 	justify-content: center;
 	flex-flow: row wrap;
+	width: 60%;
 }
 
 .contact-form .main-content h2 {
