--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -269,3 +269,21 @@ div.single-case-study-images img {
 #nf-form-1-cont {
 	width: 60%;
 }
+
+/******* PAGE STYLES AND CUSTOM TEMPLATE STYLES ********/
+
+.page-template-full-width {
+
+}
+
+/* .page .entry-title {
+    font-weight: 500;
+    text-align: center;
+    border-bottom: 0.07em solid #45ac9d;
+    padding-bottom: .5em;
+}
+.page-template-full-width .page-header {
+    border-bottom: none;
+}
+.page-template-full-width .entry-title {
+    font-size: 2.5em; */
