--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -270,20 +270,25 @@ div.single-case-study-images img {
 	width: 60%;
 }
 
-/******* PAGE STYLES AND CUSTOM TEMPLATE STYLES ********/
+/******* ABOUT PAGE STYLES ********/
 
-.page-template-full-width {
-
+#contact  {
+	width: 60%;
+	margin: 0 20%;
 }
 
-/* .page .entry-title {
-    font-weight: 500;
-    text-align: center;
-    border-bottom: 0.07em solid #45ac9d;
-    padding-bottom: .5em;
+#contact .about-contact {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-flow: row wrap;
 }
-.page-template-full-width .page-header {
-    border-bottom: none;
+
+#contact .about-contact h1 {
+	margin: 0 2rem;
+	font-size: 1.75rem;
 }
-.page-template-full-width .entry-title {
-    font-size: 2.5em; */
+
+#contact .about-contact a {
+	font-size: 1.25rem;
+}
